Implement periodic reboot and fix file URLs

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -17,7 +17,8 @@ fr.thomah.roger.karotz.testmode=true
 
 # Karotz Automate
 fr.thomah.roger.karotz.automate.interval=2
-fr.thomah.roger.karotz.automate.maxduration=900
+fr.thomah.roger.karotz.automate.reboot.delay=3600
+fr.thomah.roger.karotz.automate.rmood.maxduration=900
 
 # Storage
 fr.thomah.roger.storage.root=files
