--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,8 @@ fr.thomah.roger.karotz.testmode=false
 
 # Karotz Automate
 fr.thomah.roger.karotz.automate.interval=2
-fr.thomah.roger.karotz.automate.maxduration=900
+fr.thomah.roger.karotz.automate.reboot.delay=3600
+fr.thomah.roger.karotz.automate.rmood.maxduration=900
 
 # Storage
 fr.thomah.roger.storage.root=files
